@@ -2,7 +2,7 @@ Source: remctl
 Section: net
 Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), dpkg-dev (>= 1.14.9), libkrb5-dev,
+Build-Depends: debhelper (>= 8.1.3~), dpkg-dev (>= 1.14.9), libkrb5-dev,
  libpcre3-dev, libtest-pod-perl, perl, php5-cli, php5-dev, python-all-dev,
  python-support (>= 0.6), ruby1.8, ruby1.8-dev, ruby1.9.1, ruby1.9.1-dev
 Standards-Version: 3.9.2
